<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/activity_sign_up_two"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        tools:context="app.stepwin.SignUpActivityTwo">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:text="@string/enterpersonaldetails"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorAccent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fullname"
                android:inputType="text|none" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nam"
            android:layout_centerHorizontal="true"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/birthdate"
                android:inputType="date" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/sexe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/birth"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:layout_marginStart="11dp"
                android:layout_weight="1"
                android:text="@string/sexe"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/sexespinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:entries="@array/sexe" />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/hei"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sexe"
            android:layout_marginTop="5dp"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height"
                android:inputType="number"
                android:maxLength="3" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/wei"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hei"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                android:inputType="number"
                android:maxLength="3" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/register"
            android:layout_below="@+id/wei"
            android:visibility="gone"
            android:layout_marginBottom="10dp"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/emailedit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/register"
            android:textColor="#FFF" />

    </RelativeLayout>
</ScrollView>