<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="app.stepwin.HeightWeightActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_sign_up_two"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="app.stepwin.SignUpActivityTwo">

        <TextView
            android:text="@string/more_personal_details"
            android:layout_width="wrap_content"
            android:textColor="@color/colorAccent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_height="wrap_content"
            android:layout_marginBottom="31dp"
            android:id="@+id/textView4"
            android:layout_above="@+id/hei"
            android:layout_centerHorizontal="true" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hei"
            app:errorEnabled="true"
            android:layout_marginTop="5dp"
            android:layout_above="@+id/wei">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="3"
                android:id="@+id/height"
                android:hint="@string/height" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/wei"
            app:errorEnabled="true"
            android:layout_centerInParent="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                android:maxLength="3"
                android:id="@+id/weight"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/colorAccent"
            android:id="@+id/register" />


    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>