<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/row_history_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="2dp">
        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdate"
                android:textColor="@color/TEXT_PRIMARY"
                android:textSize="@dimen/text_size_18"/>
            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rdate"
                android:textColor="@color/TEXT_SECONDARY"
                android:textSize="@dimen/text_size_16"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step"
                android:textColor="@color/TEXT_PRIMARY"
                android:textSize="@dimen/text_size_16"/>
            <TextView
                android:id="@+id/tv_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step"
                android:textSize="@dimen/text_size_16"
                android:textColor="@color/TEXT_SECONDARY"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories"
                android:textColor="@color/TEXT_PRIMARY"
                android:textSize="@dimen/text_size_16"
                android:layout_marginLeft="40dp"/>
            <TextView
                android:id="@+id/tv_calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories"
                android:textColor="@color/TEXT_SECONDARY"
                android:textSize="@dimen/text_size_16"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>