<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.stepwin.DailyFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="00"
                android:textColor="#FFF"
                android:textSize="40sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/steps"
                android:gravity="center"
                android:text="@string/step"
                android:textColor="#FFF"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/infos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/wave"
            android:background="#FFF"
            android:orientation="horizontal"
            android:padding="@dimen/activity_vertical_margin"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1.17"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/km"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/km"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="00:00:00"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/duration"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/kcal"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progress"
            android:layout_centerHorizontal="true"
            android:text="0"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/points"
            android:layout_centerHorizontal="true"
            android:text="@string/points"
            android:textColor="#FFF"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/wave"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/points"
            android:layout_marginTop="30dp"
            android:background="@drawable/wave" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/infos"
            android:background="#FFF"></LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:indeterminate="false"
            android:progressDrawable="@drawable/progress_drawable" />
    </RelativeLayout>

</FrameLayout>
